<resources>
    <string name="app_name">NGO Connect App</string>
    <string name="ngo_reg">Register as NGO</string>
    <string name="user_ngo">Register as User</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search">Search Here...</string>
    <string name="googleSignIn">Sign in with Google</string>
    <string name="otp">Send Otp</string>
    <string name="resendotp">Resend OTP after 60 seconds</string>
    <string name="enter_code">Enter the code sent to your mobile number</string>
    <string name="click_login">Click to Login/Register</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="create_psswd">Your Password</string>
    <string name="website">www.example.com</string>
    <string name="number">+91**********</string>
    <string name="email">username@gmail.com</string>
    <string name="name">Enter NGO Name</string>

    <string name="form">Volunteer Form</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="enter_number">Enter Your Name</string>
    <string name="work_exp">Old Age Homes , Orphanage</string>
    <string name="worked_before">Have You Worked Before? If Yes, Please mention it.</string>
    <string name="know_ngo">From where did you get to know about this NGO ?</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="estimate_date">Estimated Joining Date</string>
    <string name="send_mail">Send Mail</string>

    <string name="regNumStr">Registration Number</string>
    <string name="NGOTypeStr">NGO Type</string>
    <string name="emailStr">Email</string>
    <string name="phoneNoStr">Contact Number</string>
    <string name="websiteStr">Website</string>

    <string name="about_us">About Us</string>
    <string name="about_app">Welcome to NGO Connect App  – A testament to passion, innovation, and a shared commitment to making a difference.Founded by Android developer , Shrushti Nagar and Rahul Mukati ,NGO Connect is more than just an app; it\'s a bridge connecting individuals with the noble cause of philanthropy.</string>
    <string name="our_mission">At NGO Connect, our mission is clear : To bridge the gap between those who wish to donate, seek help, or volunteer and the deserving NGOs that make a positive impact on our world. We believe in the power of technology to amplify acts of kindness and streamline the process of connecting those who want to make a difference with organizations that need their support . </string>
    <string name="rahul_bio">A passionate Android Developer who excels at UI/UX designing and give creative outlook to the ideas. I am an Upcoming Software Engineer with utmost potential to make a difference with my strong creative skills.</string>
    <string name="shrushti_bio">An Enthusiastic Android Developer proficient in Kotlin. Approaching Software Engineer, who is poised with ideas and a blend of innovation, courage and unwavering commitment to transform these ideas into digital realities.</string>

    <string name="feedback">Your Valuable Feedback</string>
    <string name="send_feedback">Send Feedback</string>

    <string name="login_activity">Already Registered , Login ! \  </string>
    <string name="registration_activity">Don\'t Have an Account ? Click here </string>
    <string name="login_user">Login as User</string>
    <string name="login_ngo">Login as NGO</string>
    <string name="login_google">Login with Google</string>

    <string name="don_detail">Donation Details</string>
    <string name="amount_donate">Enter Amount To Donate</string>
    <string name="smile">Help Them To Smile Again</string>
    <string name="donate">Donate Now</string>
    <string name="cont_para">Your contribution directly supports vital programs, covers operational needs, and establishes an emergency fund for unforeseen circumstances. We prioritize transparency and will provide regular updates on the impact of your donation. Thank you for being a catalyst for positive change.</string>

    <string name="upload_image">Please Upload an Image of your NGO </string>
    <string name="terms_conditions">By logging in, you agree to abide by our terms and conditions. Please review our terms and conditions carefully before proceeding </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="empty">Nothing to Show !</string>
</resources>