<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".NgoLoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="806dp"
        android:layout_marginTop="390dp"
        app:cardBackgroundColor="@color/bg_color"
        app:cardCornerRadius="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="280dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="50dp"
            android:text="@string/terms_conditions"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="italic">

        </TextView>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="280dp"
        android:layout_height="195dp"
        android:layout_marginStart="20dp"
        android:background="@color/white"
        android:scaleType="centerCrop"
        android:src="@drawable/applogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="280dp"
        android:layout_height="350dp"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="#B2DDFA"
        app:cardCornerRadius="50dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="25dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/emailStr"
                android:inputType="text|textEmailAddress"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="16sp">

            </EditText>

            <EditText
                android:id="@+id/etPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/create_psswd"
                android:inputType="text|textPassword"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="16sp">

            </EditText>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="20dp"
                android:text="Login"
                android:textColor="@color/white"
                android:textSize="20sp">

            </Button>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>